src/_normalizar.scss
html {
  line-height: 1.3;
  scroll-behavior: smooth;
  text-rendering: optimizeLegibility;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

body {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  overflow-x: hidden;
}

body * {
  box-sizing: border-box;
}

main {
  display: block;
}

iframe {
  border: none;
  display: block;
}

progress {
  vertical-align: baseline;
}

hr {
  box-sizing: content-box;
  height: 0;
}

abbr {
  border: none;
  cursor: help;
  text-decoration: underline dotted;
}

ins {
  border: none;
  text-decoration: underline dashed;
}

b,
strong {
  font-weight: 600;
}

sub,
sup {
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
sub {
  bottom: -.25em;
}
sup {
  top: -.5em;
}

img {
  border: none;
}

